<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014-2016 The OmniROM Project
     Copyright (C) 2021 The Evolution X Project
     Copyright (C) 2018 The Xiaomi-SDM660 Project
     Copyright (C) 2018-2021 crDroid Android Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
        http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>
    <!-- OnePlus Lab -->
    <string name="device_title">OnePlus Lab</string>
    <string name="device_summary">Experimental Features\.\nGestures\, Display Modes and tweaks.</string>
	
    <!-- Alert slider -->
    <string name="notification_slider_category_title">Alert slider</string>
    <string name="notification_slider_title">Alert slider settings</string>
    <string name="notification_slider_selection_dialog_title">Action</string>
    <string name="notification_slider_top_position">Top position</string>
    <string name="notification_slider_middle_position">Middle position</string>
    <string name="notification_slider_bottom_position">Bottom position</string>
    <string name="notification_slider_mode_total_silence">Total silence</string>
    <string name="notification_slider_mode_alarms_only">Alarms only</string>
    <string name="notification_slider_mode_priority_only">Priority only</string>
    <string name="notification_slider_mode_none">All</string>
    <string name="notification_slider_usage_title">Use slider for</string>
    <string name="notification_slider_for_notification">Notification</string>
    <string name="notification_slider_for_flashlight">Flashlight</string>
    <string name="notification_slider_for_brightness">Brightness</string>
    <string name="notification_slider_for_rotation">Rotation</string>
    <string name="notification_slider_for_ringer">Ringer</string>
    <string name="notification_slider_for_notification_ringer">Notification and ringer</string>
    <string name="notification_slider_flashlight_off">Off</string>
    <string name="notification_slider_flashlight_on">On</string>
    <string name="notification_slider_flashlight_blink">Blink</string>
    <string name="notification_slider_brightness_auto">Auto</string>
    <string name="notification_slider_brightness_brightest">Brightest</string>
    <string name="notification_slider_brightness_darkest">Darkest</string>
    <string name="notification_slider_rotation_auto">Auto</string>
    <string name="notification_slider_rotation_portrait">Portrait</string>
    <string name="notification_slider_rotation_landscape_90">Landscape (90°)</string>
    <string name="notification_slider_rotation_landscape_270">Landscape (270°)</string>
    <string name="notification_slider_ringer_normal">Normal</string>
    <string name="notification_slider_ringer_vibrate">Vibrate</string>
    <string name="notification_slider_ringer_silent">Silent</string>

    <!-- Display -->
    <string name="display_title">Display</string>
    <string name="hbm_mode_title">High brightness mode</string>
    <string name="hbm_mode_summary">Enable peak luminance</string>
    <string name="hbm_mode_warning">Long time usage of High brightness mode may damage your display</string>
    <string name="auto_hbm_title">Automatic high brightness mode</string>
    <string name="auto_hbm_summary">Enable peak luminance based on sunlight</string>
    <string name="auto_hbm_threshold_title"></string>
    <string name="auto_hbm_threshold_summary">threshold (lux)</string>

     <!-- FPS Info -->
    <string name="fps_title">Measured FPS</string>
    <string name="fps_info_title">FPS overlay</string>
    <string name="fps_info_summary">Show overlay with current frames per second</string>
    <string name="fps_info_color_title">Text color</string>
    <string name="fps_info_color_green">Green</string>
    <string name="fps_info_color_red">Red</string>
    <string name="fps_info_color_blue">Blue</string>
    <string name="fps_info_color_yellow">Yellow</string>
    <string name="fps_info_color_black">Black</string>
    <string name="fps_info_color_accent">Follow System</string>
    <string name="fps_info_position_title">Overlay position</string>
    <string name="fps_info_position_top_left">Top left</string>
    <string name="fps_info_position_top_center">Top center</string>
    <string name="fps_info_position_top_right">Top right</string>
    <string name="fps_info_position_bottom_left">Bottom left</string>
    <string name="fps_info_position_bottom_center">Bottom center</string>
    <string name="fps_info_position_bottom_right">Bottom right</string>
    <string name="fps_info_text_size_title">Text size</string>

    <!-- Doze -->
    <string name="ambient_enable">Use ambient display</string>
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_enable_title">Ambient display</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_always_on_title">Always on</string>
    <string name="dialog_ok">OK</string>
    <string name="disabled">Disabled</string>
    <string name="doze_panel_title">Doze</string>
    <string name="doze_settings_help_text">These features use sensor events to launch a doze notification pulse. The chosen sensor is only enabled when the device receives a notification, this helps to reduce battery usage. There is also an option to enable the chosen sensor as soon as the screen turns off, this will cause higher battery usage.</string>
    <string name="doze_settings_help_title">Help</string>
    <string name="pickup_sensor_title">Pickup sensor</string>
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>
    <string name="pick_up_wake_gesture_summary">Wake device on pick-up</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>
    <string name="proximity_sensor_title">Proximity sensor</string>
    <string name="ambient_display_always_on_summary">Show time, notification icons, and other info. Increased battery usage.</string>
    <string name="switch_bar_off">Off</string>
    <string name="switch_bar_on">On</string>

    <!-- Touchscreen -->
    <string name="touchscreen_title">Touchscreen</string>
    <string name="game_mode_title">Game mode</string>
    <string name="game_mode_summary">Force enable over 240Hz sampling rate for all applications</string>
    <string name="game_mode_warning">May decrease battery life</string>

    <!-- Vibrator -->
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title">System strength</string>
    <string name="vib_strength_summary">Define the intensity of the vibrator</string>

    <!-- Touchscreen Gestures -->
    <string name="touchscreen_gesture_settings_title">TouchScreen Gestures</string>
    <string name="touchscreen_gesture_settings_summary">Perform various touchscreen gestures for quick actions</string>
</resources>
