<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2014-2016 The OmniROM Project
     Copyright (C) 2021 The Evolution X Project
     Copyright (C) 2018 The Xiaomi-SDM660 Project
     Copyright (C) 2018-2021 crDroid Android Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:settings="http://schemas.android.com/apk/res/org.aosp.device.OnePlusLab"
	android.title="@string/device_title">

    <PreferenceCategory
        android:key="slider"
        android:title="@string/notification_slider_category_title">

        <ListPreference
            android:key="slider_usage"
            android:icon="@drawable/ic_slider"
            android:dialogTitle="@string/notification_slider_usage_title"
            android:title="@string/notification_slider_usage_title"
            android:entries="@array/notification_slider_usage_entries"
            android:entryValues="@array/notification_slider_usage_entry_values"
            android:summary="%s" />

        <ListPreference
            android:key="action_top_position"
            android:icon="@drawable/ic_up"
            android:dialogTitle="@string/notification_slider_selection_dialog_title"
            android:title="@string/notification_slider_top_position"
            android:summary="%s" />

        <ListPreference
            android:key="action_middle_position"
            android:icon="@drawable/ic_middle"
            android:dialogTitle="@string/notification_slider_selection_dialog_title"
            android:title="@string/notification_slider_middle_position"
            android:summary="%s" />

        <ListPreference
            android:key="action_bottom_position"
            android:icon="@drawable/ic_down"
            android:dialogTitle="@string/notification_slider_selection_dialog_title"
            android:title="@string/notification_slider_bottom_position"
            android:summary="%s" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_title">

        <Preference
            android:key="touchscreen_gesture_settings"
            android:icon="@drawable/ic_gestures_icon"
            android:persistent="false"
            android:title="@string/touchscreen_gesture_settings_title"
            android:summary="@string/touchscreen_gesture_settings_summary">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.touch.gestures"
                    android:targetClass="com.android.touch.gestures.TouchscreenGestureSettings" />
        </Preference>

        <Preference
            android:key="advanced_doze_settings"
            android:icon="@drawable/ic_doze"
            android:title="@string/ambient_display_gestures_title"
            android:summary="@string/ambient_display_gestures_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetClass="org.aosp.device.OnePlusLab.DozeSettingsActivity" />
        </Preference>

        <SwitchPreference
            android:key="hbm"
            android:icon="@drawable/ic_hbm_mode"
            android:title="@string/hbm_mode_title"
            android:summary="@string/hbm_mode_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="auto_hbm"
            android:icon="@drawable/ic_autohbm_mode"
            android:title="@string/auto_hbm_title"
            android:summary="@string/auto_hbm_summary" />

        <org.aosp.device.OnePlusLab.AutoHBMThresholdPreference
            android:key="auto_hbm_threshold"
            android:icon="@drawable/ic_autohbm_threshold"
            android:title="@string/auto_hbm_threshold_title"
            android:summary="@string/auto_hbm_threshold_summary" />
			
        <Preference
            android:icon="@drawable/ic_info_outline"
            android:summary="@string/hbm_mode_warning" 
            android:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="fps"
        android:title="@string/fps_title">

        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_overlay"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <ListPreference
            android:key="fps_info_position"
            android:defaultValue="0"
            android:icon="@drawable/ic_fps_position"
            android:title="@string/fps_info_position_title"
            android:summary="%s"
            android:entries="@array/fps_info_position_entries"
            android:entryValues="@array/fps_info_position_values" />

        <ListPreference
            android:key="fps_info_color"
            android:defaultValue="0"
            android:icon="@drawable/ic_fps_color"
            android:title="@string/fps_info_color_title"
            android:summary="%s"
            android:entries="@array/fps_info_color_entries"
            android:entryValues="@array/fps_info_color_values" />

        <org.aosp.device.OnePlusLab.CustomSeekBarPreference
            android:key="fps_info_text_size"
            android:icon="@drawable/ic_fps_text"
            android:title="@string/fps_info_text_size_title"
            android:persistent="true"
            android:max="5"
            android:min="1"
            settings:units=""
            android:defaultValue="3" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="touchscreen"
        android:title="@string/touchscreen_title">

        <SwitchPreference
            android:key="game_mode"
            android:icon="@drawable/ic_game_mode"
            android:summary="@string/game_mode_summary"
            android:title="@string/game_mode_title" />

        <Preference
            android:icon="@drawable/ic_info_outline"
            android:summary="@string/game_mode_warning" 
            android:persistent="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="vibrator"
        android:title="@string/category_vibrator">

        <org.aosp.device.OnePlusLab.VibratorStrengthPreference
            android:key="vib_strength"
            android:icon="@drawable/ic_vibration"
            android:title="@string/vib_strength_title"
            android:summary="@string/vib_strength_summary" />
    </PreferenceCategory>
</PreferenceScreen>
